deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodi
spec:
  selector:
    app: nodi
  ports:
    - name: http
      port: 80
      targetPort: http
